Updated index.html with SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Loan Repayment Calculator (Variable)</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="A Home Loan Repayment Calculator that helps you calculate your minimum repayment amount, required offset balance, and other key loan details based on input parameters.">
+    <meta name="keywords" content="home loan calculator, loan repayment calculator, home loan interest, mortgage calculator, loan offset calculator, home loan repayment, calculate home loan repayment">
+    <title>Home Loan Repayment Calculator - Calculate Your Mortgage Repayments</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <style>
         body {
