Updated the index.html with disclaimer details

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </pre>
             <p>Total Loan & Interest Amount:<strong> {{ totalLoanAndInterest.toFixed(2) }}</strong></p>
             <p class="disclaimer">
-                This is not a financial tool but for educational purposes only. Please consult your bank or loan broker
+                This is not a financial tool. This tool developed only for educational purposes only. Please consult your bank or loan broker
                 before making any financial decisions.
             </p>
         </div>
