Added feedback link to index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
             background-color: #f8f9fa;
             border-radius: 4px;
         }
+        .feedback-link {
+            font-weight: bold;
+            color: #000000;
+            text-decoration: none;
+            border-bottom: 2px solid #000000;
+            padding-bottom: 2px;
+            transition: all 0.3s ease;
+        }
+
+        .feedback-link:hover {
+            color: #212020;
+            border-bottom: 2px solid #212020;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -177,6 +192,7 @@
                 This is not a financial tool. This tool developed only for educational purposes only. Please consult your bank or loan broker
                 before making any financial decisions.
             </p>
+            <a href="https://github.com/dazimax/homeloancalculator/issues" target="_blank" class="feedback-link">Provide suggestions, feedbacks or &#x1F41B; here!</a>
         </div>
     </div>
     
